syntax = "proto3";

package auth;

option go_package = "pkg/transport/grpc/dto";

import "google/protobuf/timestamp.proto";
import "pkg/transport/grpc/proto/project.proto";

message User {
    string id = 1;
    string email = 2;
    string name = 3;
    bytes avatar_img = 4; 
    string phone = 5;
    string bio = 6;
    repeated ParticipantInfo participants = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

message Company {
    string id = 1;
    string name = 2;
    string codename = 3;
    int64 people_count = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    project.ProjectList projects = 7;
}


message Role {
    string id = 1;
    string name = 2;
    string permissions = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message Participant {
    int32 id = 1;
    string user_id = 2;
    string company_id = 3;
    string role_id = 4; // Reference to Role
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message ParticipantInfo {
    string company_id = 1;
    string company_name = 2;
    Role role = 3;
    google.protobuf.Timestamp joined_at = 4;
}

message UserCredentials {
    string email = 1;
    string password = 2;
}

message AuthPayload {
    string session_id = 1;
    string access_token = 2;
    string refresh_token = 3; 
    User user = 4;
    int64 exp = 5;
}

// LISTS

message CompanyList {
    int32 page = 1;
    int32 per_page = 2;
    int32 total_pages = 3;
    int32 total_items = 4;
    repeated Company items = 5;
}


// CREATION

message NewUser {
    string name = 1;
    string email = 2;
    string password = 3;
    optional bytes avatar_img = 4;
}

message NewCompany {
    string name = 1;
    string codename = 2;
}

message NewRole {
    string name = 1;
    repeated string permissions = 2;
    string company_id = 3;
}

message NewParticipant {
    string user_id = 1;
    string company_id = 2;
    string role_id = 3;
}